Rewrite to v2.0 with GUI balance editor and settings command
- /qe admin tree refactored around the same verb dictionary as
  QuickLobby (give, take, set, remove, edit, list, reload, settings).
  Replaces the old /qe create subcommand with /qe edit <player> which
  opens a balance-editor GUI.
- New EcoEditGui: 27-slot inventory with deposit and withdraw preset
  buttons (lime/red wool), live-refreshing balance display, head item
  for the target. Preset amounts read from edit-gui.* in config.
- /qe settings [key] [value] persists runtime flags (debug,
  log-transactions, starting-balance, max-pay, pay-cooldown) directly
  into config.yml. Msg.debug() gates verbose feedback behind the flag.
- Async auto-save task on a configurable interval; /qe reload still
  flushes + reloads on demand.
- VaultHook moved from economy/ to compat/ alongside PapiHook to match
  the convention. notImpl helper de-duplicates 14 bank stubs.
- Deleted dead QuickCratesConnection listener (empty event handlers).
  Deleted old monolithic EcoCommand in favor of QuickEcoCommand router.
- Config trimmed: removed unimplemented interest, tax, lottery,
  rewards, inflation, money-sinks, daily limits, bank, and logging
  sections. Kept only what the code actually reads.
- Permission tree updated: quickeco.admin parents qe.reload, qe.edit,
  qe.give, qe.take, qe.set, qe.remove, qe.settings, qe.balance.others.
  quickeco.use parents qe.balance, qe.pay, qe.baltop.
- README rewritten to document the v2.0 surface (GUI editor, settings,
  verbs, permission tree, placeholders, API).
- All source and config kept ASCII-only.